crates/oxc_react_compiler/tests/snapshots/error.todo-handle-update-context-identifiers.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-handle-update-context-identifiers.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Handle UpdateExpression to variables captured within lambdas.", labels: [LabeledSpan { label: None, span: Span { start: 71, end: 80 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
