crates/oxc_react_compiler/tests/snapshots/error.todo-hir_unsupported_node_format.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-hir_unsupported_node_format.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Handle Import expressions", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 204, length: 6 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
