crates/oxc_react_compiler/tests/snapshots/error.todo-hoist-function-decls.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-hoist-function-decls.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support functions with unreachable code that may contain hoisted declarations", labels: [LabeledSpan { label: None, span: Span { start: 42, end: 77 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
