crates/oxc_react_compiler/tests/snapshots/error.todo-hoisted-function-in-unreachable-code.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-hoisted-function-in-unreachable-code.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized", labels: [LabeledSpan { label: Some("this is uninitialized"), span: SourceSpan { offset: 61, length: 3 }, primary: false }], help: Some("<unknown> Foo$0"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
